removal of unused legacy stuff + small fixes + more todos